# linkscribe

./: .editorconfig  .env.example  .gitattributes  .gitignore  AGENTS.md  CLAUDE.md  CONTRIBUTING.md  LICENSE  Makefile  README.md  SECURITY.md  pyproject.toml
.agents/skills/transcribe-media/: SKILL.md
.agents/skills/transcribe-media/agents/: openai.yaml
.claude/skills/transcribe-media/: SKILL.md
.github/: dependabot.yml
.github/workflows/: ci.yml
clients/: __init__.py  linkscribe.py
deploy/: linkscribe-api.service  linkscribe-certbot-renew.service  linkscribe-certbot-renew.timer  linkscribe-worker.service  nginx-tls.conf.template  nginx.conf.template
integrations/chatgpt/: instructions.md  openapi.yaml
scripts/: install.sh  uninstall.sh  validate-skills.py
src/linkscribe/: __init__.py  api.py  config.py  processor.py  store.py  worker.py
src/linkscribe/static/: index.html  privacy.html
tests/: conftest.py  test_api.py  test_client.py  test_processor.py  test_store.py  test_worker.py
