[build-system]
requires = ["setuptools>=83"]
build-backend = "setuptools.build_meta"

[project]
name = "linkscribe"
version = "0.1.0"
description = "A resource-aware media transcription gateway for AI agents."
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
license-files = ["LICENSE"]
authors = [{ name = "Zayd Zaari" }]
keywords = ["agents", "transcription", "whisper", "yt-dlp", "fastapi"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Environment :: Web Environment",
  "Framework :: FastAPI",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Topic :: Multimedia :: Sound/Audio :: Speech",
]
dependencies = [
  "fastapi>=0.115,<1",
  "uvicorn[standard]>=0.30,<1",
]

[project.optional-dependencies]
dev = [
  "build>=1,<2",
  "httpx2>=2.7,<3",
  "pip-audit>=2.10,<3",
  "PyYAML>=6,<7",
  "pytest>=9.0.3,<10",
  "pytest-cov>=5,<8",
  "ruff>=0.9,<1",
]

[project.urls]
Homepage = "https://github.com/zaydzaari/linkscribe"
Repository = "https://github.com/zaydzaari/linkscribe.git"
Issues = "https://github.com/zaydzaari/linkscribe/issues"

[project.scripts]
linkscribe-api = "linkscribe.api:run"
linkscribe-worker = "linkscribe.worker:run"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
linkscribe = ["static/*.html"]

[tool.pytest.ini_options]
addopts = "-q --strict-markers"
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "S"]
ignore = ["S101", "S404", "S603", "S607"]
